* Fixed: Issue with saving the state of the last configuration in the Site Hardening widget. * Fixed: Issue with the "Fix All Issues" button overflow in the Site Hardening widget. * Added: Missing option to unset the Uptime Monitoring widget in the Overview page settings. * Added: Link to the Monitoring page in the Uptime Monitoring widget footer. * Added: "Jump to WP Admin" link in the Connection Status widget list items. * Added: "Jump to WP Admin" link in the Site Hardening widget list items. * Updated: Icon in the Available Translations card element in the Updates Overview widget. * Updated: Mini-label text in the Total Available Updates card element in the Updates Overview widget. * Updated: Font weight of feed elements in the Non-MainWP Changes widget for better readability. * Updated: Scrollbar colors in the Dark theme * Updated: Error message returned in case Child Site already contains connection data and needs reset

--- a/assets/css/themes/mainwp-dark-theme.css
+++ b/assets/css/themes/mainwp-dark-theme.css
@@ -1032,3 +1032,33 @@ body.mainwp-ui.mainwp-custom-theme,
   color: #fff !important;
 }
 /* end */
+
+
+/*******************************
+         Scrollbars
+*******************************/
+
+/* For WebKit Browsers (e.g., Chrome, Edge, Safari) */
+::-webkit-scrollbar {
+  width: 5px; /* Width of the scrollbar */
+}
+
+::-webkit-scrollbar-track {
+  background: #1c1d1b; /* Background of the track */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #666666; /* Color of the scrollbar thumb */
+  border-radius: 5px; /* Round edges for the thumb */
+  border: 2px solid #1c1d1b; /* Optional: creates padding between thumb and track */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #666666; /* Thumb color on hover */
+}
+
+/* For Firefox (using CSS Scrollbars Module Level 1) */
+* {
+  scrollbar-width: thin; /* Options: auto, thin */
+  scrollbar-color: #666666 #1c1d1b; /* thumb color, track color */
+}
